# sciaudit

./: .gitignore  pyproject.toml
sciaudit/: __init__.py  cli.py  evaluator.py  extractor.py  models.py  pipeline.py  report.py
sciaudit/parsers/: __init__.py  html_parser.py  markdown_parser.py
sciaudit/verifiers/: __init__.py  base.py  citation.py  data.py
scripts/: audit_iran_report.py
tests/: test_evaluator.py  test_extractor.py  test_parsers.py  test_verifiers.py
