[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciaudit"
version = "0.1.0"
description = "Scientific claim auditor — programmatic verification of quantitative claims, citations, and statistics in AI-generated papers and reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Matias Urzua", email = "murzua7@github.com" }]
keywords = ["scientific-writing", "fact-checking", "citation-verification", "claim-verification"]

dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
pdf = ["marker-pdf>=0.3"]
stats = ["statcheck"]
all = ["marker-pdf>=0.3", "statcheck"]

[project.scripts]
sciaudit = "sciaudit.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
